Módulo de permisos funcional y detalles en el diseño general

--- a/FRONT-END/src/app/Auth/login/login.component.css
+++ b/FRONT-END/src/app/Auth/login/login.component.css
@@ -3,15 +3,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100%;
     background: linear-gradient(to bottom right, #E3F9E5, #A8EDDF);
   }
-  
+
   /* Tarjeta de login */
+  .tarjeta{
+    margin: 14.2px;
+  }
   .bg-white {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 15px;
-    padding: 30px;
+    padding: 50px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   }
   
