--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -62,7 +62,7 @@
           <li class="item" routerLink="/loss" routerLinkActive="active" (click)="closeSidebar()">
             <i class="pi pi-exclamation-circle mr-2" style="color:salmon;"></i><a>Pérdidas</a>
           </li>
-          <li class="item" routerLink="/returProvider" routerLinkActive="active" (click)="closeSidebar()">
+          <li class="item" routerLink="/returnProvider" routerLinkActive="active" (click)="closeSidebar()">
             <i class="bi bi-bandaid mr-2" style="color:springgreen;"></i><a>Proveedor</a>
           </li>
           <li class="item" routerLink="/returnSale" routerLinkActive="active" (click)="closeSidebar()">
