--- a/FRONT-END/src/app/modules/credits/credits.component.html
+++ b/FRONT-END/src/app/modules/credits/credits.component.html
@@ -1,5 +1,6 @@
 <!-- PLANTILLA CRUD -->
 <app-crud 
+  [Module]="'Créditos'"
   [items]="filteredCredits" 
   [columns]="columns" 
   [canEdit]="false" 
