--- a/FRONT-END/src/app/modules/providers/providers.component.html
+++ b/FRONT-END/src/app/modules/providers/providers.component.html
@@ -1,7 +1,6 @@
-<h2 class="title" style="text-align: center;">Proveedores</h2>
-
 <!-- PLANTILLA CRUD -->
 <app-crud 
+  [Module]="'Proveedores'"
   [items]="filteredProviders" 
   [columns]="columns" 
   [canDelete]="false"
