--- a/FRONT-END/src/app/Auth/login/login.component.html
+++ b/FRONT-END/src/app/Auth/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="min-h-screen bg-gradient-to-br from-green-100 to-blue-100 flex items-center justify-center p-4">
-  <div class="bg-white bg-opacity-90 backdrop-blur-md rounded-lg shadow-2xl p-8 max-w-md w-full space-y-8">
+<div class="min-h-screen bg-gradient-to-br from-green-100 to-blue-100 flex items-center justify-center">
+  <div class="bg-white bg-opacity-90 backdrop-blur-md rounded-lg shadow-2xl p-8 max-w-md w-full space-y-8 tarjeta">
     <div class="text-center">
       <div class="bg-green-500 rounded-full p-3 inline-block">
         <i class="fas fa-shopping-basket text-white icono-cesta"></i>
