--- a/FRONT-END/src/app/shared/crud/crud.component.html
+++ b/FRONT-END/src/app/shared/crud/crud.component.html
@@ -6,6 +6,10 @@
       <button *ngIf="canExport" pButton pRipple label="Exportar" icon="pi pi-download"
         class="p-button-help p-button-rounded p-button-outlined" (click)="onExport()"></button>
     </div>
+    
+    <!-- Aplicar clases flex y margin auto para centrar el texto -->
+    <h3 class="title flex-grow text-center" style="margin: 0; margin-right: 200px;">{{ Module }}</h3>
+    
     <div class="relative flex items-center space-x-2 ml-auto">
       <input pInputText type="text" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Buscar"
         class="search-input" />
@@ -14,6 +18,7 @@
         (click)="clearSearch()"></i>
     </div>
   </div>
+  
 
   <div class="table-container">
     <p-table [value]="items" [tableStyle]="{'min-width': '50rem', 'margin': '0 auto', 'text-align': 'center'}"
