MOstrando la infromación en vez del ID :) en compras

--- a/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
+++ b/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
@@ -1,7 +1,7 @@
-<h2 class="title" style="text-align: center;">Resumen de ventas</h2>
-
 <!-- PLANTILLA CRUD -->
-<app-crud [items]="filteredSale" 
+<app-crud 
+[Module]="'Resumen de Ventas'"
+[items]="filteredSale" 
 [columns]="colums" 
 [canDelete]="false" 
 [canExport]="false" 
