--- a/FRONT-END/src/app/modules/loss/loss.component.html
+++ b/FRONT-END/src/app/modules/loss/loss.component.html
@@ -1,7 +1,6 @@
-<h2 class="title" style="text-align: center;">Pérdidas</h2>
-
 <!-- PLANTILLA CRUD -->
 <app-crud 
+  [Module]="'Registro de Pérdidas'"
   [items]="filteredLoss" 
   [columns]="colums" 
   [canDelete]="false"
