--- a/FRONT-END/src/app/modules/products/products.component.html
+++ b/FRONT-END/src/app/modules/products/products.component.html
@@ -100,10 +100,10 @@
                     </small>
                 </div>
 
-                <div class="field">
+                <!-- <div class="field">
                     <label for="stock">Stock</label>
-                    <input type="number" pInputText id="stock" formControlName="stock" />
-                </div>
+                    <input type="number" pInputText id="stock" formControlName="stock"/>
+                </div> -->
             </div>
 
 
