--- a/FRONT-END/src/app/modules/return-provider/return-provider.component.html
+++ b/FRONT-END/src/app/modules/return-provider/return-provider.component.html
@@ -1,7 +1,6 @@
-<h2 class="title" style="text-align: center;">Devolución por Proveedor</h2>
-
-
-<app-crud [items]="filteredReturnProvider" 
+<app-crud 
+[Module]="'Devolución por Proveedor'"
+[items]="filteredReturnProvider" 
 [columns]="colums" 
 [canDelete]="false" 
 [canExport]="false" 
