--- a/FRONT-END/src/app/modules/return-sale/return-sale.component.html
+++ b/FRONT-END/src/app/modules/return-sale/return-sale.component.html
@@ -1,7 +1,7 @@
-<h2 class="title" style="text-align: center;">Devolucion por Venta</h2>
-
 <!-- PLANTILLA CRUD -->
-<app-crud [items]="filteredReturnSale" 
+<app-crud 
+[Module]="'Devolución por Venta'"
+[items]="filteredReturnSale" 
 [columns]="colums" 
 [canDelete]="false" 
 [canExport]="false" 
