Anular de detalle de venta, listo

--- a/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
+++ b/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
@@ -7,10 +7,10 @@
 [canExport]="false" 
 [canEdit]="false"
 [canCreate]="false"
-[canCancel]="true"
+[canCancelSale]="true"
 (cancel)="cancelSale($event)"    
 [canSeeDetail]="true" 
-    [canChangeStatus]="true" 
+    [canChangeStatusSales]="true" 
     [showStateColumn]="true" 
     [statusField]="'estadoVenta'"
     (detail)="openShowModal($event)" 
