--- a/FRONT-END/src/app/modules/shoppings/shoppingscreate.component.html
+++ b/FRONT-END/src/app/modules/shoppings/shoppingscreate.component.html
@@ -1,7 +1,7 @@
 
 
 
-<a routerLink="/Shoppinview" routerLinkActive="active">
+<a routerLink="/shoppingview" routerLinkActive="active">
     <i class="pi pi-angle-left" style="font-size: 1.5rem;color: gray;"></i>
 </a>
 <h2 class="title" style="text-align: center;">Crear Compras</h2>
