--- a/FRONT-END/src/app/shared/crud/crud.component.html
+++ b/FRONT-END/src/app/shared/crud/crud.component.html
@@ -3,7 +3,7 @@
     <div class="flex items-center space-x-2 flex-grow">
       <button *ngIf="canCreate" pButton pRipple label="Nuevo" icon="pi pi-plus"
         class="p-button-success p-button-rounded p-button-outlined" (click)="onCreate()"></button>
-      <button *ngIf="canExport" pButton pRipple label="Exportar" icon="pi pi-download"
+      <button *ngIf="canExport" pButton pRipple label="Descargar" icon="pi pi-download"
         class="p-button-help p-button-rounded p-button-outlined" (click)="onExport()"></button>
     </div>
     <div class="relative flex items-center space-x-2 ml-auto">
